--- a/front-web/src/Orders/styles.css
+++ b/front-web/src/Orders/styles.css
@@ -267,10 +267,12 @@
     flex-direction: column;
     padding: 0;
     width: 90%;
+    margin-top: 25px;
   }
 
   .steps-items {
-    padding: 0
+    padding: 0;
+    margin-top:15px;
   }
 
   .order-location-content {
